reimplementation on top of SfiRStore and SfiWStore. added compat code for
Sun Jun  8 17:27:15 2003  Tim Janik  <timj@gtk.org>

        * bsestorage.[hc]: reimplementation on top of SfiRStore and SfiWStore.
        added compat code for <=0.5.1 binary data handling, removed lots of cruft.

        * bsebindata.[hc]: removed entirely.

        * bseenums.[hc]: removed BseEndianType.

        * gsldatahandle.[hc]: added osc_freq and mix_freq as fixed members to
        data handles. changed constructors and callers accordingly.
        cosmetic fixups to wave format strings.

        * *.[hc]: made mix_freq, osc_freq ordering in argument lists consistent.

        * gslloader.[hc]:
        * gslloader-mad.c:
        * gslloader-wav.c:
        * gslloader-gslwave.c:
        * gslloader-oggvorbis.c:
        * gsldatahandle-vorbis.[hc]:
        * gsldatahandle-mad.[hc]: provide osc_freq and mix_freq in datahandles.

        * bse/gslcommon.c: cosmetic fixups to endianess strings.

        * bsewave.[hc]: changed storage format, since bse_storage_parse_data_handle()
        now stores mix_freq, osc_freq etc. all automatically.
        left compat code in place to parse <=0.5.1 files.

        * bsesong.proc: fix NULL termination in call to bse_container_new_child().

        * bseproject.c: adapt to BseStorage changes. removed cruft.

        * bsedefs.h: removed BseTokenType, there's SfiTokenType. adapt
        BseTryStatement() to SfiStoreParser() signature.

        * *.c: fixup code due to removal of BseTokenType and other BseStorage
        changes.

svn path=/trunk/; revision=1126

--- a/TODO
+++ b/TODO
@@ -1,7 +1,8 @@
 FIXMES:
-- fix newsong/newtrack
-- remove BseBinData
+- rename gsl_strerror()
+- fix 64bit v_int usage of GScanner in BSE?
 - fix undo for: BseWave, BsePart, BseDataPocket
+- popdown piano roll when parts are removed
 - get rid of bse_procedure_execvl
 - get rid of super->mod_time
 - add BEAST_SAMPLE_DIRS, describe env variables in man page
@@ -77,6 +78,7 @@ FIXMES:
 * eliminate everything that fgrep -i fixme/hack reveals
 
 DOCS:
+- add QuickStart section on piano roll usage, esp. copy+pasting
 - try implementing some kind of table layout for tsmview [timj]
 - add QuickStart-Samples docs once we support sample editing [timj]
 - turn off word-wrapping for normal files (e.g. /etc/profile) in
