--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+Tue Jun 17 04:32:34 2003  Tim Janik  <timj@gtk.org>
+
+	* beast-gtk/bstsnetrouter.c (popup_entries): add snet scripts to
+	modules menu.
+
+	* shell/modules2grid.scm: new script to align modules within a
+	synthesis network.
+
 Mon Jun 16 20:37:38 2003  Tim Janik  <timj@gtk.org>
 
 	* beast-gtk/bstapp.c (bst_app_reload_supers): don't show internal
