--- a/bse/ChangeLog
+++ b/bse/ChangeLog
@@ -1,3 +1,18 @@
+Thu Jun 19 23:21:39 2003  Tim Janik  <timj@gtk.org>
+
+	* bsecategories.proc: get rid of debugging junk.
+
+	* bsemidiicontroller.c:
+	* bsepcminput.c:
+	* bsepcmoutput.c:
+	* bsesubinstrument.c:
+	* bsesubiport.c:
+	* bsesubkeyboard.c:
+	* bsesuboport.c:
+	* bsesubsynth.c: fix GType ids still being stored in 32bit integers,
+	which breaks on alpha where type ids are 64bit.
+	tracked down by Sam Hocevar <sam@zoy.org>.
+
 Tue Jun 17 14:40:26 2003  Tim Janik  <timj@gtk.org>
 
 	* bseserver.c (engine_init): turn assertion into warning, so we don't
