--- a/TODO
+++ b/TODO
@@ -64,6 +64,7 @@ FIXMES:
 - object clippboard
 - fade in/out of samples (sample editor)
 - wave editor: provide transpose spinner for wave preview
+- fix BseSong::denominator SpinButton arrows not working
 * eliminate everything that fgrep -i fixme/hack reveals
 
 DOCS:
