--- a/docs/site-contact.texi
+++ b/docs/site-contact.texi
@@ -10,8 +10,11 @@
 
 @unnumbered Mailing List
 
-A mailing list for discussing usage/development of @beast is available at
+A mailing list for discussing usage and development of @beast is
+available at
 @uref{http://mail.gnome.org/mailman/listinfo/beast/}.
+The archives of the mailing list can be read at
+@uref{http://mail.gnome.org/archives/beast/}.
 
 @unnumbered Contacts
 
