--- a/docs/site-news.texi
+++ b/docs/site-news.texi
@@ -11,6 +11,22 @@
 @unnumbered What's New?
 
 
+@newsTitle{Saturday 21 Jun 2003, The i-didn't-mean-to Realease}
+
+BEAST/BSE version 0.5.2 is available in the
+@uref{beast-doc://download,,download section}.
+@c , here is the
+@c @uref{http://www.gnomedesktop.org/article.php?sid=1050,,FootNotes announcement}.
+
+With this release, @beast allowes to gracefully backup from erroneous
+user actions, by offering unlimited Undo/Redo facilities for all operations.
+Other highlights are greatly simplified sample and synthesizer
+selection for tracks and WAV recording abilities.
+
+As usual, more release details are outlined in the
+@uref{beast-doc://release-news,,NEWS section}.
+
+
 @newsTitle{Sunday 20 Apr 2003, BEAST-0.5.1 patch fixed}
 
 The @beast patch to update from version 0.5.0 to 0.5.1 unfortunately
@@ -42,17 +58,6 @@ the net, for instance the
 
 As usual, more release details are outlined in the
 @uref{beast-doc://release-news,,NEWS section}.
-
-
-@newsTitle{Wednesday 19 Mar 2003, List move and site updates}
-
-The @beast mailing list has moved. People may subscribe to the
-new list at @uref{http://mail.gnome.org/mailman/listinfo/beast/}
-now, or just read the archives at @uref{http://mail.gnome.org/archives/beast/}.
-Also, the @uref{beast-doc://links-synthesis,, link section}
-has been updated, and we got new or updated screen shots
-(amongst them the new track editor) in the
-@uref{beast-doc://screenshots/index,,screen shot area}.
 
 
 @bye
