--- a/docs/site-news.texi
+++ b/docs/site-news.texi
@@ -18,11 +18,15 @@ BEAST/BSE version 0.5.2 is available in the
 @c , here is the
 @c @uref{http://www.gnomedesktop.org/article.php?sid=1050,,FootNotes announcement}.
 
+Tarball:
+@uref{http://beast.gtk.org/beast-ftp/v0.5/beast-0.5.2.tar.gz,, beast-0.5.2.tar.gz}
+and patch:
+@uref{http://beast.gtk.org/beast-ftp/v0.5/patch-beast-0.5.1-0.5.2.bz2,, patch-beast-0.5.1-0.5.2.bz2}.
+
 With this release, @beast allowes to gracefully backup from erroneous
 user actions, by offering unlimited Undo/Redo facilities for all operations.
 Other highlights are greatly simplified sample and synthesizer
 selection for tracks and WAV recording abilities.
-
 As usual, more release details are outlined in the
 @uref{beast-doc://release-news,,NEWS section}.
 
