--- a/docs/site-news.texi
+++ b/docs/site-news.texi
@@ -14,9 +14,8 @@
 @newsTitle{Saturday 21 Jun 2003, The i-didn't-mean-to Realease}
 
 BEAST/BSE version 0.5.2 is available in the
-@uref{beast-doc://download,,download section}.
-@c , here is the
-@c @uref{http://www.gnomedesktop.org/article.php?sid=1050,,FootNotes announcement}.
+@uref{beast-doc://download,,download section}, here is the
+@uref{http://www.gnomedesktop.org/article.php?sid=1176,,FootNotes announcement}.
 
 Tarball:
 @uref{http://beast.gtk.org/beast-ftp/v0.5/beast-0.5.2.tar.gz,, beast-0.5.2.tar.gz}
