--- a/TODO
+++ b/TODO
@@ -1,4 +1,6 @@
 FIXMES:
+- bse_category_copy_shallow() overwrites and leaks newly allocated rec_copy->icon
+- bse_icon_copy_shallow() overwrites and leaks newly allocated rec_copy->pixels
 - add demo song
 - check whether */icons/Makefile.icons is included in dist tarball
 - check whether plugins/Makefile.plugins is included in dist tarball
