--- a/bse/ChangeLog
+++ b/bse/ChangeLog
@@ -1,3 +1,10 @@
+Mon Jun 23 20:33:33 2003  Tim Janik  <timj@gtk.org>
+
+	* bsejanitor.proc:
+	* bsejanitor.[hc]: cleaned up connection shutdown logic. spew connection
+	aborts to stderr. reap remote child (with small delay after killing if
+	necessary). 
+
 Fri Jun 20 00:00:31 2003  Tim Janik  <timj@gtk.org>
 
 	* gsldatahandle-mad.c: fix BSE not compiling without libmad,
