--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,10 @@
+Overview of Changes in BEAST/BSE 0.5.3:
+
+* Seperated core plugin loading from LADSPA plugin loading
+* Fixed memory leaks in various places
+* Added child process (bsesh) error monitoring
+* Fixed bsesh (script) communication for systems with short writes
+
 Overview of Changes in BEAST/BSE 0.5.2:
 
 * Implemented unlimited Undo/Redo facilities
