--- a/docs/site-oldnews.texi
+++ b/docs/site-oldnews.texi
@@ -11,6 +11,39 @@
 @unnumbered What Was New? (Ancient News)
 
 
+@newsTitle{Sunday 20 Apr 2003, BEAST-0.5.1 patch fixed}
+
+The @beast patch to update from version 0.5.0 to 0.5.1 unfortunately
+missed an image file (due to it being detected as binary by diff),
+causing the 0.5.1 build to fail for some users. We've put up a new
+patch as
+@uref{http://beast.gtk.org/beast-ftp/v0.5/patch-beast-0.5.0-0.5.1.fixed.gz,,patch-beast-0.5.0-0.5.1.fixed.gz}
+now, which contains the missing file and correctly updates from 0.5.0 to
+@uref{http://beast.gtk.org/beast-ftp/v0.5/beast-0.5.1.tar.gz,,beast-0.5.1.tar.gz}.
+We apologise for the inconvenience this may have caused.
+
+On a related topic, many users encountered crashes upon creation of synthesis
+networks with the newer versions, there is now a
+@uref{beast-doc://faq#gnome-canvas-idle-id-crash,,FAQ entry}
+adressing the specifics of the issue.
+
+
+@newsTitle{Monday 14 Apr 2003, BEAST Featuring LADSPA}
+
+BEAST/BSE version 0.5.1 is available in the
+@uref{beast-doc://download,,download section}, here is the
+@uref{http://www.gnomedesktop.org/article.php?sid=1050,,FootNotes announcement}.
+
+The most exciting new feature in this release is the support for
+@uref{http://www.ladspa.org/,, LADSPA} plugins. With that, @beast
+gains support for a wide variety of excellent plugins available on
+the net, for instance the
+@uref{http://plugin.org.uk/,,plugin collection from Steve Harris}.
+
+As usual, more release details are outlined in the
+@uref{beast-doc://release-news,,NEWS section}.
+
+
 @newsTitle{Wednesday 19 Mar 2003, List move and site updates}
 
 The @beast mailing list has moved. People may subscribe to the
