--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,6 @@
 Overview of Changes in BEAST/BSE 0.5.4:
 
+* Added support for per-track and per-song special effects
 * Miscellaneous bug fixes
 
 Overview of Changes in BEAST/BSE 0.5.3:
